# runtime-tracker-rs-worker

./: .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  wrangler.toml
.github/workflows/: deploy.yml
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue  config.js  main.js  style.css
frontend/src/components/: AISummary.vue  DarkModeToggle.vue  DateSelector.vue  DeviceCountCard.vue  DeviceList.vue  DeviceStats.vue  EyeTimeStats.vue  Footer.vue  GiscusComments.vue  Header.vue  LoadingSkeleton.vue  RecentApps.vue  StatsPanel.vue  Toast.vue  UsageDetails.vue
frontend/src/components/charts/: AppUsageChart.vue  TimeUsageChart.vue
frontend/src/composables/: formatTime.js  pageConfig.js  useDarkMode.js  useDevices.js  useStats.js  useStatsState.js  useToast.js
frontend/src/styles/: index.css
migrations/: 0001_init.sql
src/: db.rs  kv.rs  lib.rs  models.rs  utils.rs
src/routes/: admin.rs  api.rs  eyetime.rs  mod.rs
src/services/: ai.rs  eyetime.rs  mod.rs  query.rs  recorder.rs
