[package]
name = "runtime-tracker-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.4", features = ["wasm_js"] }
wasm-bindgen = "0.2"